<resources>
    <string name="App_Name">Unstoppable</string>
    <string name="Alert_Ok">OK</string>
    <string name="Alert_Cancel">Cancel</string>
    <string name="Alert_Copy">Copy</string>
    <string name="Alert_Share">Forward</string>
    <string name="Alert_Close">Close</string>
    <string name="Alert_Success">Success</string>
    <string name="Alert_Copied">Copied</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Create">Create</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Restore">Restore</string>
    <string name="Button_Enable">Enable</string>
    <string name="Button_Back">Back</string>
    <string name="Button_Close">Close</string>
    <string name="Button_Ok">OK</string>
    <string name="Button_Share">Share</string>
    <string name="Error">Error</string>
    <string name="NotAvailable">N/A</string>
    <string name="Wallet">%s Wallet</string>
    <string name="Welcome_Title">Unstoppable</string>
    <string name="Welcome_CreateWallet">Create Wallet</string>
    <string name="Welcome_RestoreWallet">Restore Wallet</string>
    <string name="Welcome_Version" translatable="false">version %s</string>
    <string name="Create_Title">New Wallet</string>
    <string name="Create_Description">Select cryptocurrencies for the wallet. You will be able to add or remove coins later as well.</string>
    <string name="Restore_Title">Restore</string>
    <string name="Restore_Enter_Key_Title">Enter Key</string>
    <string name="Restore_Enter_Key_Description_Eos">Enter your private key for %s Wallet.</string>
    <string name="Restore_Enter_Key_Description_Mnemonic">Enter your private key for %1s Wallet which consists of %2s words. The words needs to be entered in correct order and separated by spaces.</string>
    <string name="Restore_Description">To restore existing wallet you need to enter a private key for that wallet.\n\nOnce you restore one wallet you will be able to restore other wallets via Manage Wallets section in Security settings of the app.</string>
    <string name="Restore_ValidationFailed">Incorrect Key</string>
    <string name="Restore_RestoreFailed">Failed to restore wallet</string>
    <string name="Restore_EosAccountName">Account Name</string>
    <string name="Restore_EosActivePrivateKey">Active Private Key</string>
    <string name="Restore_EosAccountIncorrect">Incorrect Account</string>
    <string name="Restore_EosKeyIncorrect">Incorrect Key</string>
    <string name="Backup_Intro_Title">Backup</string>
    <string name="Backup_Intro_TitleShow">Show Key</string>
    <string name="Backup_Intro_Subtitle">The private key that will be shown next is the only way to restore your funds if your phone is ever lost, stolen, broken etc.\n\nMake sure that no one is watching your screen.\n\nThe coins controlled by this key: %s.</string>
    <string name="Backup_Intro_Later">Later</string>
    <string name="Backup_Intro_BackupNow">Backup</string>
    <string name="Backup_DisplayTitle">Private Key</string>
    <string name="Backup_Confirmation_Description">Enter words from your private key.</string>
    <string name="Backup_Confirmation_FailureAlertText"> Words do not match</string>
    <string name="Backup_Confirmation_CheckTitle">Check…</string>
    <string name="Backup_Button_Confirm">Confirm</string>
    <string name="Backup_Button_Next">Next</string>
    <string name="Backup_Button_Submit">Submit</string>
    <string name="Backup_Button_ShowKey">Show Key</string>
    <string name="Backup_Eos_AccountName">Account Name</string>
    <string name="Backup_Eos_ActivePrivateKey">Private Key</string>
    <string name="Backup_Eos_Warning">Copying your key using “copy” action poses some risks if you use any clipboard management apps or some other apps that may access to clipboard data.</string>
    <string name="Balance_Title">Balance</string>
    <string name="Balance_Deposit">Receive</string>
    <string name="Balance_Send">Send</string>
    <string name="Balance_RatePerCoin">%s per %s</string>
    <string name="Balance_SyncedUntil">until: %s</string>
    <string name="Balance_Syncing">Syncing…</string>
    <string name="Balance_Syncing_WithProgress">Syncing… %s%%</string>
    <string name="Balance_AddCoins">Add Coins</string>
    <string name="Balance_Sort_Balance">Balance</string>
    <string name="Balance_Sort_PopupTitle">Sort by</string>
    <string name="Balance_Sort_Az">Name</string>
    <string name="Balance_Sort_24hPriceChange">24h Price (%)</string>
    <string name="Send_Title">Send %s</string>
    <string name="Send_Hint_Address">Address</string>
    <string name="Send_Hint_Amount">Amount</string>
    <string name="Send_Fee">Fee:</string>
    <string name="Send_Button_Paste">Paste</string>
    <string name="Send_Button_Next">Next</string>
    <string name="Send_Button_Max">Max</string>
    <string name="Send_Confirmation_Title">Confirm</string>
    <string name="Send_Confirmation_To">To: </string>
    <string name="Send_Confirmation_HintMemo">Memo:</string>
    <string name="Send_Confirmation_Eos_HintAccount">Account</string>
    <string name="Send_Confirmation_Total">Total:</string>
    <string name="Send_Confirmation_EstimateTime">Estimate Time:</string>
    <string name="Send_Confirmation_LockTime">TimeLock:</string>
    <string name="Send_Confirmation_Send_Button">Send</string>
    <string name="Send_ScanQrCode">Scan QR Code</string>
    <string name="Send_Success">\u2713 Sent</string>
    <string name="Send_Error_InvalidAddress">Address seems invalid. Please check and try again!</string>
    <string name="Send_Error_InsufficientBalance">Not enough funds.</string>
    <string name="Send_Error_IncorrectAddress">Incorrect Address</string>
    <string name="Send_Error_UnsupportedAddress">Time locking works only with P2PKH addresses (starting with 1)</string>
    <string name="Send_Error_BalanceAmount">Balance %s</string>
    <string name="Send_Error_MinimumAmount">Min. amount %s</string>
    <string name="Send_Error_MaximumAmount">Max. amount %s</string>
    <string name="Send_Error_MinRequiredBalance">Min. required remainder %s</string>
    <string name="Send_DialogTitle">Confirm</string>
    <string name="Send_DialogAvailableBalance">Available Balance</string>
    <string name="Send_DialogSpeed">Transaction Speed:</string>
    <string name="Send_TxSpeed_Low">Low</string>
    <string name="Send_TxSpeed_Medium">Medium</string>
    <string name="Send_TxSpeed_High">High</string>
    <string name="Send_DialogDuration">Duration:</string>
    <string name="Send_DialogFee">Fee:</string>
    <string name="Send_DialogTotal">Total:</string>
    <string name="Send_DialogMemoHint">Memo</string>
    <string name="Send_DialogProceed">Proceed</string>
    <string name="Send_DialogLockTime">TimeLock</string>
    <string name="Send_LockTime_Off">Off</string>
    <string name="Send_LockTime_Hour">1 hour</string>
    <string name="Send_LockTime_Month">1 month</string>
    <string name="Send_LockTime_HalfYear">6 months</string>
    <string name="Send_LockTime_Year">1 year</string>
    <string name="Send_Sending">Sending</string>
    <string name="Send_ERC_Alert">Transaction fees for %s (ERC20) paid in Ethereum. You need %s ETH.</string>
    <string name="Send_Token_InsufficientFeeAlert">Transaction fees for %s (%s) paid in %s. You need %s.</string>
    <string name="Deposit_Title">Receive %s</string>
    <string name="Deposit_Share">Share</string>
    <string name="Deposit_Your_Address">Your Address</string>
    <string name="Deposit_Your_Account">Your Account</string>
    <string name="Timestamp_JustNow">just now</string>
    <string name="Timestamp_MinAgo">%dm. ago</string>
    <string name="Timestamp_HoursAgo">%dh. ago</string>
    <string name="Timestamp_Today">Тoday</string>
    <string name="Timestamp_Yesterday">Yesterday</string>
    <string name="Duration_instant">Instant</string>
    <string name="Duration_Within">Within %s</string>
    <string name="Duration_Hours">%d h.</string>
    <string name="Duration_Minutes">%d min.</string>
    <string name="Duration_Seconds">%d sec.</string>
    <string name="Transactions_Title">Transactions</string>
    <string name="Transactions_FilterAll">ALL</string>
    <string name="Transactions_EmptyList">You don\’t have any transactions yet</string>
    <string name="Transactions_Receiving">Receiving</string>
    <string name="Transactions_Sending">Sending</string>
    <string name="Transactions_Failed">Failed</string>
    <string name="TransactionInfo_Title">Transaction</string>
    <string name="TransactionInfo_Status">Status</string>
    <string name="TransactionInfo_Status_Confirmed">Confirmed</string>
    <string name="TransactionInfo_Id">ID</string>
    <string name="TransactionInfo_To">To</string>
    <string name="TransactionInfo_From">From</string>
    <string name="TransactionInfo_Time">Time</string>
    <string name="TransactionInfo_ButtonVerify">Verify</string>
    <string name="TransactionInfo_LockedUntil">Locked until</string>
    <string name="TransactionInfo_RecipientHash">Recipient</string>
    <string name="TransactionInfo_HistoricalRate">Historical Rate</string>
    <string name="TransactionInfo_Fee">Fee</string>
    <string name="TransactionInfo_FootNote">The value of this transaction appears as 0 because it was sent to your own address</string>
    <string name="Info_LockTime_Title">TimeLock</string>
    <string name="Info_LockTime_Description">The sender sent these funds with a spending lock that will expire on %s.\n\nNo worries, the received Bitcoins are already yours but until the lock period expires you can not spend them on the Bitcoin network.</string>
    <string name="FullInfo_Title">Transaction</string>
    <string name="FullInfo_Time">Time</string>
    <string name="FullInfo_Block">Block</string>
    <string name="FullInfo_Confirmations">Confirmations</string>
    <string name="FullInfo_Inputs">Inputs</string>
    <string name="FullInfo_Outputs">Outputs</string>
    <string name="FullInfo_Size">Size</string>
    <string name="FullInfo_Fee">Fee</string>
    <string name="FullInfo_Rate">Rate</string>
    <string name="FullInfo_Source">Source</string>
    <string name="FullInfo_Contract">Contract</string>
    <string name="FullInfo_From">From</string>
    <string name="FullInfo_To">To</string>
    <string name="FullInfo_Status">Status</string>
    <string name="FullInfo_Memo">Memo</string>
    <string name="FullInfo_CpuUsage">CPU Usage</string>
    <string name="FullInfo_NetUsage">Net Usage</string>
    <string name="FullInfo_GasLimit">Gas Limit</string>
    <string name="FullInfo_GasUsed">Gas Used</string>
    <string name="FullInfo_GasPrice">Gas Price</string>
    <string name="FullInfo_Source_Title">Source</string>
    <string name="FullInfo_Source_Online">Online</string>
    <string name="FullInfo_Source_Offline">Offline</string>
    <string name="FullInfo_Error_Subtitle">Offline</string>
    <string name="FullInfo_Error_Retry">Retry</string>
    <string name="FullInfo_Error_ChangeSource">Change Source</string>
    <string name="FullInfo_Id">ID</string>
    <string name="FullInfo_TotalInput">Total Input</string>
    <string name="FullInfo_TotalOutput">Total Output</string>
    <string name="FullInfo_FeePerByte">Fee per byte</string>
    <string name="FullInfo_FeeRate">Fee Rate</string>
    <string name="FullInfo_NoAddress">Empty Address</string>
    <string name="FullInfo_SatByte">sat/B</string>
    <string name="FullInfo_Bytes">Bytes</string>
    <string name="FullInfo_SubtitleInputs">Inputs</string>
    <string name="FullInfo_SubtitleOutputs">Outputs</string>
    <string name="FullInfoEth_Nonce">Nonce</string>
    <string name="ManageKeys_Create">Create</string>
    <string name="ManageKeys_Restore">Restore</string>
    <string name="ManageKeys_Delete">Delete</string>
    <string name="ManageKeys_Backup">Backup</string>
    <string name="ManageKeys_Show">Show</string>
</resources>