<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewHolderRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="#3F6AB5"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- First line-->

    <!-- Second line-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/accountName"
            style="@style/Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Bitcoin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/accountCoins"
        style="@style/Subhead2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:includeFontPadding="false"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="BTC, BCH, DASH, ETH, ERC-20" />

    <!-- Actions -->

    <LinearLayout
        android:id="@+id/buttonsWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/buttonNew"
            style="@style/ButtonSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="#FF7FFFD4"
            android:minHeight="32dp"
            android:text="@string/ManageKeys_Create"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonImport"
            style="@style/ButtonSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:minHeight="32dp"
            android:text="@string/ManageKeys_Restore"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonUnlink"
            style="@style/ButtonSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:minHeight="32dp"
            android:text="@string/ManageKeys_Delete"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonShow"
            style="@style/ButtonSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:minHeight="32dp"
            android:text="@string/ManageKeys_Show"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonBackup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="#FF7FFFD4"
            android:minHeight="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/imageButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_medium"
                android:includeFontPadding="false"
                android:text="@string/ManageKeys_Backup"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>
